[package]
name = "rling_gui"
authors = ["sero01000 <i@yahoo.com>","@phones_parts"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui="*"
encoding_rs="*"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "rling_gui.exe"
LegalCopyright = "Copyright © 2021"
FileDescription = "@phones_parts telegram"